--- a/styles/css/style.css
+++ b/styles/css/style.css
@@ -375,7 +375,64 @@ h6 {
   transition: max-height 0.2s ease-out;
 }
 
-.menu-card {
+.menu .navigation {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+  border-bottom: 1px solid #ddd;
+  -webkit-box-shadow: -1px 0 4px #777;
+          box-shadow: -1px 0 4px #777;
+  height: 50px;
+  padding: 10px;
+  background-color: white;
+  z-index: 1;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.menu .navigation svg {
+  font-size: 20px;
+  margin-right: 10px;
+}
+
+.menu .menu-navigation {
+  min-width: 250px;
+  color: black;
+}
+
+.menu .menu-navigation ul {
+  list-style-type: none;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  padding: 0;
+  width: 100%;
+}
+
+.menu .menu-navigation ul a {
+  display: block;
+  padding: 10px 20px;
+  cursor: pointer;
+}
+
+.menu .menu-navigation ul a.active {
+  border-bottom: 1px solid red;
+}
+
+.menu .menu-card {
+  padding-top: 50px;
   background-attachment: fixed;
   background-size: cover;
   background-color: white;
@@ -389,35 +446,7 @@ h6 {
           flex-direction: column;
 }
 
-.menu-card .menu-navigation {
-  min-width: 250px;
-  color: black;
-}
-
-.menu-card .menu-navigation ul {
-  list-style-type: none;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  padding: 0;
-  width: 100%;
-}
-
-.menu-card .menu-navigation ul a {
-  display: block;
-  padding: 10px 20px;
-  cursor: pointer;
-}
-
-.menu-card .menu-navigation ul a.active {
-  border-bottom: 1px solid red;
-}
-
-.menu-card .menu-item {
+.menu .menu-card .menu-item {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -426,24 +455,24 @@ h6 {
   font-size: 30px;
 }
 
-.menu-card .menu-item .numer {
+.menu .menu-card .menu-item .numer {
   margin-right: 10px;
 }
 
-.menu-card .menu-item .info {
+.menu .menu-card .menu-item .info {
   margin-right: 10px;
 }
 
-.menu-card .menu-item .price {
+.menu .menu-card .menu-item .price {
   margin-left: auto;
   white-space: nowrap;
 }
 
-.menu-card .menu-item .buy {
+.menu .menu-card .menu-item .buy {
   margin-left: 10px;
 }
 
-.menu-card .menu-item .buy button {
+.menu .menu-card .menu-item .buy button {
   position: relative;
   top: 0px;
   display: -webkit-box;
@@ -457,8 +486,8 @@ h6 {
           align-items: center;
   justify-self: flex-end;
   margin-left: 10px;
-  height: 100px;
-  width: 100px;
+  height: 75px;
+  width: 75px;
   border-style: none;
   background-color: #77aa03;
   color: white;
@@ -467,24 +496,25 @@ h6 {
   transition: 0.6s;
 }
 
-.menu-card p {
+.menu .menu-card p {
   margin: 0;
 }
 
-.menu-card .wrapper {
+.menu .menu-card .wrapper {
+  position: relative;
   width: 100%;
   background-color: transparent;
   padding: 20px;
 }
 
-.menu-card h2 {
+.menu .menu-card h2 {
   color: black;
   font-size: 40px;
   margin-bottom: 20px;
   margin-top: 0;
 }
 
-.menu-card .categories {
+.menu .menu-card .categories {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -498,15 +528,15 @@ h6 {
   justify-items: space-between;
 }
 
-.menu-card .categories {
+.menu .menu-card .categories {
   padding-top: 0;
 }
 
-.menu-card .category {
+.menu .menu-card .category {
   width: 100%;
 }
 
-.menu-card .menu-items {
+.menu .menu-card .menu-items {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -521,7 +551,7 @@ h6 {
           flex-direction: row;
 }
 
-.menu-card .menu-item {
+.menu .menu-card .menu-item {
   padding: 10px;
   -webkit-box-align: center;
       -ms-flex-align: center;
@@ -537,38 +567,38 @@ h6 {
           box-shadow: -1px 1px 5px #ddd;
 }
 
-.menu-card .image {
+.menu .menu-card .image {
   width: 100%;
 }
 
-.menu-card .image img {
+.menu .menu-card .image img {
   display: block;
   margin: 0 auto;
   max-width: 100%;
 }
 
-.menu-card .info {
+.menu .menu-card .info {
   width: 100%;
   margin: 20px 0;
 }
 
-.menu-card .details {
+.menu .menu-card .details {
   color: #777;
   font-size: 20px;
 }
 
-.menu-card .category {
+.menu .menu-card .category {
   display: none;
   animation: animatedOpacity 0.5s both reverse;
 }
 
-.menu-card .category.active {
+.menu .menu-card .category.active {
   display: block;
   -webkit-animation: animatedOpacity 0.5s both;
           animation: animatedOpacity 0.5s both;
 }
 
-.menu-card .alergens button {
+.menu .menu-card .alergens button {
   text-decoration: underline;
   border: none;
   background-color: transparent;
@@ -595,20 +625,20 @@ h6 {
 }
 
 @media (min-width: 500px) {
-  .menu-card .menu-item {
+  .menu .menu-card .menu-item {
     -ms-flex-wrap: nowrap;
         flex-wrap: nowrap;
   }
-  .menu-card .menu-item .image {
+  .menu .menu-card .menu-item .image {
     max-width: 200px;
   }
-  .menu-card .menu-item .info {
+  .menu .menu-card .menu-item .info {
     margin-left: 10px;
   }
 }
 
 @media (min-width: 1024px) {
-  .menu-card {
+  .menu .menu-card {
     -webkit-box-orient: horizontal;
     -webkit-box-direction: normal;
         -ms-flex-direction: row;
@@ -619,7 +649,7 @@ h6 {
 }
 
 @media (min-width: 1300px) {
-  .menu-card {
+  .menu .menu-card {
     -webkit-box-orient: horizontal;
     -webkit-box-direction: normal;
         -ms-flex-direction: row;
@@ -627,7 +657,7 @@ h6 {
     -ms-flex-wrap: nowrap;
         flex-wrap: nowrap;
   }
-  .menu-card .menu-item {
+  .menu .menu-card .menu-item {
     width: 48%;
   }
 }
