--- a/styles/scss/menu/_menu.scss
+++ b/styles/scss/menu/_menu.scss
@@ -3,5 +3,7 @@
   @import "navigation";
   @import "menu-navigation";
   @import "menu-card";
+  @import "order";
+  @import "annotations";
   @import "media";
 }
