--- a/styles/css/style.css
+++ b/styles/css/style.css
@@ -389,9 +389,10 @@ h6 {
   border-bottom: 1px solid #ddd;
   -webkit-box-shadow: -1px 0 4px #777;
           box-shadow: -1px 0 4px #777;
-  height: 50px;
+  height: 75px;
   padding: 10px;
   background-color: white;
+  color: black;
   z-index: 1;
   -webkit-box-align: center;
       -ms-flex-align: center;
@@ -399,8 +400,12 @@ h6 {
 }
 
 .menu .navigation svg {
-  font-size: 20px;
+  font-size: 50px;
   margin-right: 10px;
+}
+
+.menu .navigation .menu-expand {
+  margin-right: auto;
 }
 
 .menu .menu-navigation {
@@ -432,7 +437,7 @@ h6 {
 }
 
 .menu .menu-card {
-  padding-top: 50px;
+  padding-top: 75px;
   background-attachment: fixed;
   background-size: cover;
   background-color: white;
@@ -598,6 +603,10 @@ h6 {
           animation: animatedOpacity 0.5s both;
 }
 
+.menu .menu-card .alergens svg {
+  margin-right: 10px;
+}
+
 .menu .menu-card .alergens button {
   text-decoration: underline;
   border: none;
@@ -624,6 +633,206 @@ h6 {
   }
 }
 
+.menu .order {
+  height: 100vh;
+  width: 100vw;
+  top: -100%;
+  background-color: white;
+  position: fixed;
+  left: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  padding: 75px 20px;
+  z-index: 2;
+  overflow: auto;
+  -webkit-transition: top 0.3s;
+  transition: top 0.3s;
+}
+
+.menu .order.active {
+  top: 0;
+}
+
+.menu .order .close {
+  position: absolute;
+  top: 30px;
+  right: 30px;
+  padding: 0px;
+  cursor: pointer;
+}
+
+.menu .order h3 {
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+.menu .order .order-item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 100%;
+}
+
+.menu .order .name {
+  -ms-flex-preferred-size: 30%;
+      flex-basis: 30%;
+}
+
+.menu .order .times {
+  -webkit-box-flex: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.menu .order .times svg {
+  font-size: 12px;
+}
+
+.menu .order .times .count {
+  margin-left: 10px;
+}
+
+.menu .order .value {
+  -ms-flex-preferred-size: 30%;
+      flex-basis: 30%;
+  text-align: end;
+  font-weight: bold;
+}
+
+.menu .order .summary {
+  margin-top: 20px;
+  text-align: end;
+  font-weight: bold;
+}
+
+.menu .order p {
+  margin: 0;
+  padding: 10px 0;
+}
+
+.menu .order .total,
+.menu .order .discount {
+  border-bottom: 1px solid #ddd;
+}
+
+.menu .order .total-to-pay {
+  font-size: 16px;
+}
+
+.menu .order .edit {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.menu .order .edit > :nth-child(2) {
+  margin-left: 10px;
+}
+
+.menu .order .edit button {
+  font-size: 20px;
+  padding: 0;
+  border: none;
+  background-color: transparent;
+}
+
+.menu .order .edit button:hover {
+  color: cadetblue;
+  background-color: transparent;
+}
+
+.menu .order a,
+.menu .order button.save {
+  padding: 10px 20px;
+  border: 1px solid black;
+  display: block;
+  text-align: center;
+  color: black;
+  margin-left: auto;
+}
+
+.menu .order a {
+  text-decoration: none;
+}
+
+.menu .annotations {
+  height: 100vh;
+  width: 100vw;
+  top: -100%;
+  position: fixed;
+  left: 0;
+  background-color: white;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  padding: 75px 20px;
+  z-index: 2;
+  overflow: auto;
+  -webkit-transition: top 0.3s;
+  transition: top 0.3s;
+  justify-items: stretch;
+}
+
+.menu .annotations.active {
+  top: 0;
+}
+
+.menu .annotations .close {
+  position: absolute;
+  top: 30px;
+  right: 30px;
+  padding: 0px;
+  cursor: pointer;
+}
+
+.menu .annotations h3 {
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+.menu .annotations .content textarea {
+  width: 100%;
+}
+
+.menu .annotations .save-button {
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+}
+
+.menu .annotations button.save {
+  padding: 10px 20px;
+  border: 1px solid black;
+}
+
 @media (min-width: 500px) {
   .menu .menu-card .menu-item {
     -ms-flex-wrap: nowrap;
@@ -646,19 +855,24 @@ h6 {
     -ms-flex-wrap: nowrap;
         flex-wrap: nowrap;
   }
+  .menu #menu {
+    display: block;
+  }
+  .menu .menu-expand {
+    display: none;
+  }
 }
 
 @media (min-width: 1300px) {
-  .menu .menu-card {
-    -webkit-box-orient: horizontal;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: row;
-            flex-direction: row;
-    -ms-flex-wrap: nowrap;
-        flex-wrap: nowrap;
-  }
   .menu .menu-card .menu-item {
     width: 48%;
   }
+}
+
+button {
+  margin: 0;
+  padding: 0;
+  background-color: transparent;
+  border-style: none;
 }
 /*# sourceMappingURL=style.css.map */
