--- a/styles/scss/style.scss
+++ b/styles/scss/style.scss
@@ -1,3 +1,10 @@
 @import "normalize";
 @import "global";
 @import "menu/menu";
+
+button {
+  margin: 0;
+  padding: 0;
+  background-color: transparent;
+  border-style: none;
+}
