--- a/styles/css/style.css
+++ b/styles/css/style.css
@@ -368,11 +368,26 @@ h6 {
   display: none;
 }
 
+button {
+  outline: none !important;
+}
+
+input[type="submit"] {
+  border: none;
+}
+
 .hidden {
   max-height: 0;
   overflow: hidden;
   -webkit-transition: max-height 0.2s ease-out;
   transition: max-height 0.2s ease-out;
+}
+
+.menu {
+  background-image: url("../../../images/background.jpg");
+  background-attachment: fixed;
+  background-size: cover;
+  min-height: 100vh;
 }
 
 .menu .navigation {
@@ -383,17 +398,18 @@ h6 {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: end;
-      -ms-flex-pack: end;
-          justify-content: flex-end;
-  border-bottom: 1px solid #ddd;
-  -webkit-box-shadow: -1px 0 4px #777;
-          box-shadow: -1px 0 4px #777;
-  height: 75px;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  border-bottom: 1px solid #c87e29;
+  -webkit-box-shadow: -1px 0 4px transparent;
+          box-shadow: -1px 0 4px transparent;
+  height: 100px;
   padding: 10px;
-  background-color: white;
-  color: black;
-  z-index: 1;
+  background-color: black;
+  background-color: rgba(0, 0, 0, 0.7);
+  color: white;
+  z-index: 2;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
@@ -402,18 +418,46 @@ h6 {
 .menu .navigation svg {
   font-size: 50px;
   margin-right: 10px;
+  color: white;
 }
 
-.menu .navigation .menu-expand {
+.menu .navigation svg:hover {
+  color: #c87e29;
+}
+
+.menu .navigation .logo {
   margin-right: auto;
+  max-width: 75px;
+}
+
+.menu .navigation .logo img {
+  max-width: 100%;
+}
+
+.menu .navigation .user {
+  margin-left: auto;
 }
 
 .menu .menu-navigation {
+  position: fixed;
+  top: 100px;
+  z-index: 1;
+  background-color: black;
+  background-color: rgba(0, 0, 0, 0.7);
+  border-right: 1px solid #c87e29;
+  width: 100%;
+  max-height: calc(100vh - 100px);
+  overflow-y: auto;
+  font-size: 25px;
+  text-transform: uppercase;
   min-width: 250px;
-  color: black;
+  color: white;
+  max-height: calc(100vh - 100px);
+  overflow-y: auto;
 }
 
 .menu .menu-navigation ul {
+  height: 100%;
   list-style-type: none;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -422,26 +466,30 @@ h6 {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+  justify-items: stretch;
   padding: 0;
   width: 100%;
 }
 
 .menu .menu-navigation ul a {
   display: block;
-  padding: 10px 20px;
+  padding: 20px 20px;
   cursor: pointer;
 }
 
 .menu .menu-navigation ul a.active {
-  border-bottom: 1px solid red;
+  color: #c87e29;
 }
 
 .menu .menu-card {
-  padding-top: 75px;
+  min-height: 100vh;
+  overflow-y: auto;
+  padding-top: 100px;
   background-attachment: fixed;
   background-size: cover;
-  background-color: white;
-  color: black;
+  background-color: black;
+  background-color: rgba(0, 0, 0, 0.5);
+  color: white;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -456,7 +504,11 @@ h6 {
   display: -ms-flexbox;
   display: flex;
   width: 100%;
+  max-width: 400px;
+  background-color: black;
+  background-color: rgba(0, 0, 0, 0.7);
   margin-bottom: 20px;
+  border: 1px solid #c87e29;
   font-size: 30px;
 }
 
@@ -478,8 +530,6 @@ h6 {
 }
 
 .menu .menu-card .menu-item .buy button {
-  position: relative;
-  top: 0px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -494,7 +544,7 @@ h6 {
   height: 75px;
   width: 75px;
   border-style: none;
-  background-color: #77aa03;
+  background-color: #b30908;
   color: white;
   font-size: 14px;
   -webkit-transition: 0.6s;
@@ -513,10 +563,16 @@ h6 {
 }
 
 .menu .menu-card h2 {
-  color: black;
+  color: white;
   font-size: 40px;
   margin-bottom: 20px;
   margin-top: 0;
+  text-transform: uppercase;
+}
+
+.menu .menu-card .wrapper {
+  max-height: calc(100vh - 100px);
+  overflow-y: auto;
 }
 
 .menu .menu-card .categories {
@@ -545,9 +601,6 @@ h6 {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
   -webkit-box-orient: horizontal;
@@ -557,23 +610,23 @@ h6 {
 }
 
 .menu .menu-card .menu-item {
+  margin: 0 auto;
   padding: 10px;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  max-width: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
-  border: 1px solid #ddd;
-  -webkit-box-shadow: -1px 1px 5px #ddd;
-          box-shadow: -1px 1px 5px #ddd;
+  margin-bottom: 10px;
 }
 
 .menu .menu-card .image {
   width: 100%;
+  overflow: hidden;
+  border-radius: 5px;
 }
 
 .menu .menu-card .image img {
@@ -588,8 +641,8 @@ h6 {
 }
 
 .menu .menu-card .details {
-  color: #777;
-  font-size: 20px;
+  color: #ccc;
+  font-size: 25px;
 }
 
 .menu .menu-card .category {
@@ -601,18 +654,6 @@ h6 {
   display: block;
   -webkit-animation: animatedOpacity 0.5s both;
           animation: animatedOpacity 0.5s both;
-}
-
-.menu .menu-card .alergens svg {
-  margin-right: 10px;
-}
-
-.menu .menu-card .alergens button {
-  text-decoration: underline;
-  border: none;
-  background-color: transparent;
-  color: black;
-  cursor: pointer;
 }
 
 @-webkit-keyframes animatedOpacity {
@@ -633,11 +674,41 @@ h6 {
   }
 }
 
+.menu .alergens {
+  font-size: 20px;
+  margin-top: 100px;
+}
+
+.menu .alergens svg {
+  margin-right: 10px;
+}
+
+.menu .alergens button {
+  border: none;
+  background-color: transparent;
+  color: white;
+  cursor: pointer;
+}
+
+.menu .alergens ul {
+  list-style: none;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+.menu .alergens li {
+  -ms-flex-preferred-size: 100%;
+      flex-basis: 100%;
+}
+
 .menu .order {
   height: 100vh;
   width: 100vw;
   top: -100%;
-  background-color: white;
+  background-color: black;
   position: fixed;
   left: 0;
   display: -webkit-box;
@@ -652,6 +723,7 @@ h6 {
   overflow: auto;
   -webkit-transition: top 0.3s;
   transition: top 0.3s;
+  color: white;
 }
 
 .menu .order.active {
@@ -664,6 +736,10 @@ h6 {
   right: 30px;
   padding: 0px;
   cursor: pointer;
+}
+
+.menu .order .close svg {
+  color: white;
 }
 
 .menu .order h3 {
@@ -754,6 +830,7 @@ h6 {
   padding: 0;
   border: none;
   background-color: transparent;
+  color: white;
 }
 
 .menu .order .edit button:hover {
@@ -764,10 +841,10 @@ h6 {
 .menu .order a,
 .menu .order button.save {
   padding: 10px 20px;
-  border: 1px solid black;
+  border: 1px solid white;
   display: block;
   text-align: center;
-  color: black;
+  color: white;
   margin-left: auto;
 }
 
@@ -781,7 +858,7 @@ h6 {
   top: -100%;
   position: fixed;
   left: 0;
-  background-color: white;
+  background-color: black;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -795,6 +872,7 @@ h6 {
   -webkit-transition: top 0.3s;
   transition: top 0.3s;
   justify-items: stretch;
+  color: white;
 }
 
 .menu .annotations.active {
@@ -807,6 +885,10 @@ h6 {
   right: 30px;
   padding: 0px;
   cursor: pointer;
+}
+
+.menu .annotations .close svg {
+  color: white;
 }
 
 .menu .annotations h3 {
@@ -830,23 +912,174 @@ h6 {
 
 .menu .annotations button.save {
   padding: 10px 20px;
-  border: 1px solid black;
+  border: 1px solid white;
+  color: white;
+}
+
+.menu .customize-pizza {
+  background-color: white;
+  background-color: black;
+  max-width: 800px;
+  padding: 20px;
+  color: white;
+}
+
+.menu .customize-pizza svg {
+  color: white;
+}
+
+.menu .customize-pizza button {
+  color: white;
+}
+
+.menu .customize-pizza .header {
+  margin-bottom: 20px;
+}
+
+.menu .customize-pizza .modal-header {
+  border: none;
+}
+
+.menu .customize-pizza .category {
+  border: 1px solid #ddd;
+  padding: 10px 20px;
+}
+
+.menu .customize-pizza .size {
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin-bottom: 20px;
+}
+
+.menu .customize-pizza .size-button {
+  -webkit-box-flex: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
+  padding: 10px 20px;
+  text-align: center;
+}
+
+.menu .customize-pizza .size-button.active {
+  background-color: green;
+  color: white;
+}
+
+.menu .customize-pizza .category-button {
+  margin-bottom: 20px;
+}
+
+.menu .customize-pizza .category-button svg {
+  margin-right: 10px;
+}
+
+.menu .customize-pizza .category-button small {
+  margin-left: 10px;
+}
+
+.menu .customize-pizza .addon {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-bottom: 10px;
+}
+
+.menu .customize-pizza .addon .count {
+  margin-right: 10px;
+}
+
+.menu .customize-pizza .addon .name {
+  margin: 0 10px;
+}
+
+.menu .customize-pizza .addon .edit {
+  margin-left: auto;
+}
+
+.menu .customize-pizza .addon .edit .plus {
+  margin-left: 10px;
+}
+
+.menu .customize-pizza .price-summary {
+  font-weight: bold;
+  text-align: right;
+}
+
+.menu .customize-pizza .price-summary p {
+  margin: 0;
+}
+
+.menu .customize-pizza .buttons {
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+}
+
+.menu .customize-pizza .buttons .cancel {
+  margin-right: 10px;
+  background-color: #b60609;
+  color: white;
+  padding: 10px 20px;
+}
+
+.menu .customize-pizza .buttons .save {
+  background-color: green;
+  color: white;
+  padding: 10px 20px;
+}
+
+.menu .customize-pizza .changes {
+  font-size: #ccc;
+  color: #ccc;
+}
+
+.menu .customize-pizza .amount {
+  width: 100%;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin: 20px 0;
+}
+
+.menu .customize-pizza .amount input {
+  width: 50px;
+  padding: 10px;
+}
+
+.menu .customize-pizza .amount button {
+  height: 50px;
+  width: 50px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  border: 1px solid white;
 }
 
 @media (min-width: 500px) {
-  .menu .menu-card .menu-item {
-    -ms-flex-wrap: nowrap;
-        flex-wrap: nowrap;
-  }
-  .menu .menu-card .menu-item .image {
-    max-width: 200px;
-  }
-  .menu .menu-card .menu-item .info {
-    margin-left: 10px;
+  .menu .menu-card .alergens li {
+    -ms-flex-preferred-size: 33%;
+        flex-basis: 33%;
   }
 }
 
-@media (min-width: 1024px) {
+@media (min-width: 700px) {
   .menu .menu-card {
     -webkit-box-orient: horizontal;
     -webkit-box-direction: normal;
@@ -855,18 +1088,106 @@ h6 {
     -ms-flex-wrap: nowrap;
         flex-wrap: nowrap;
   }
+  .menu .menu-navigation {
+    position: static;
+    width: 250px;
+    padding: 10px;
+  }
   .menu #menu {
     display: block;
   }
   .menu .menu-expand {
     display: none;
   }
+  .menu .navigation {
+    padding: 10px 50px;
+  }
 }
 
-@media (min-width: 1300px) {
+@media (min-width: 800px) {
   .menu .menu-card .menu-item {
     width: 48%;
   }
+}
+
+@media (min-width: 1200px) {
+  .menu .menu-card .menu-item {
+    width: 30%;
+  }
+}
+
+.menu .login {
+  height: 100vh;
+  width: 100vw;
+  top: -100%;
+  background-color: black;
+  position: fixed;
+  left: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  padding: 75px 20px;
+  z-index: 2;
+  overflow: auto;
+  -webkit-transition: top 0.3s;
+  transition: top 0.3s;
+  color: white;
+}
+
+.menu .login.active {
+  top: 0;
+}
+
+.menu .login form {
+  margin: 0 auto;
+  max-width: 300px;
+}
+
+.menu .login .close {
+  position: absolute;
+  top: 30px;
+  right: 30px;
+  padding: 0px;
+  cursor: pointer;
+}
+
+.menu .login .close svg {
+  color: white;
+}
+
+.menu .login .buttons {
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+}
+
+.menu .login .buttons .cancel {
+  margin-right: 10px;
+  background-color: #b60609;
+  color: white;
+  padding: 10px 20px;
+}
+
+.menu .login .buttons .save {
+  background-color: #77aa03;
+  color: white;
+  padding: 10px 20px;
+}
+
+.menu .login .buttons .remind {
+  width: 100%;
+  text-align: right;
+  display: block;
 }
 
 button {
