--- a/styles/scss/menu/_annotations.scss
+++ b/styles/scss/menu/_annotations.scss
@@ -1,10 +1,12 @@
 .annotations {
+  $font-color: $regular-font-color;
+
   height: 100vh;
   width: 100vw;
   top: -100%;
   position: fixed;
   left: 0;
-  background-color: $hidden-menu-background;
+  background-color: $background-color;
   display: flex;
   flex-direction: column;
   padding: $hidden-menu-paddings;
@@ -12,7 +14,7 @@
   overflow: auto;
   transition: top 0.3s;
   justify-items: stretch;
-
+  color: $font-color;
   &.active {
     top: 0;
   }
@@ -23,6 +25,10 @@
     right: $hidden-menu-close-size;
     padding: 0px;
     cursor: pointer;
+
+    svg {
+      color: white;
+    }
   }
 
   h3 {
@@ -42,6 +48,7 @@
   }
   button.save {
     padding: 10px 20px;
-    border: 1px solid $hidden-menu-border-color;
+    border: 1px solid $font-color;
+    color: $font-color;
   }
 }
