--- a/styles/scss/menu/_navigation.scss
+++ b/styles/scss/menu/_navigation.scss
@@ -4,22 +4,36 @@
   left: 0;
   width: 100%;
   display: flex;
-  justify-content: flex-end;
-  border-bottom: 1px solid $navigation-border-color;
+  justify-content: center;
+  border-bottom: 1px solid $border-color;
   box-shadow: $navigation-box-shadow;
   height: $navigation-height;
   padding: $navigation-paddings;
   background-color: $navigation-background-color;
+  background-color: rgba(0, 0, 0, 0.7);
   color: $navigation-color;
-  z-index: 1;
+  z-index: 2;
   align-items: center;
 
   svg {
     font-size: $navigation-icon-size;
     margin-right: 10px;
+    color: white;
+
+    &:hover {
+      color: $gold;
+    }
   }
 
-  .menu-expand {
+  .logo {
     margin-right: auto;
+    max-width: 75px;
+    img {
+      max-width: 100%;
+    }
+  }
+
+  .user {
+    margin-left: auto;
   }
 }
