--- a/styles/scss/menu/_order.scss
+++ b/styles/scss/menu/_order.scss
@@ -2,7 +2,7 @@
   height: 100vh;
   width: 100vw;
   top: -100%;
-  background-color: $hidden-menu-background;
+  background-color: rgba(0, 0, 0, 1);
   position: fixed;
   left: 0;
   display: flex;
@@ -11,6 +11,7 @@
   z-index: 2;
   overflow: auto;
   transition: top 0.3s;
+  color: $hidden-menu-color;
 
   &.active {
     top: 0;
@@ -21,6 +22,10 @@
     right: $hidden-menu-close-size;
     padding: 0px;
     cursor: pointer;
+
+    svg {
+      color: white;
+    }
   }
 
   h3 {
@@ -92,6 +97,7 @@
       padding: 0;
       border: none;
       background-color: transparent;
+      color: white;
 
       &:hover {
         color: $hidden-menu-hover-color;
